syntax = "proto3";

import "google/api/annotations.proto";

option go_package = "pkg/api/gateway";

package gateway;

service Gateway {
    rpc SignUp (SignUpRequest) returns (SignUpResponse) {
        option (google.api.http) = {
            post: "/api/v1/sign-up"
            body: "*"
        };
    }
    
    rpc SignIn (SignInRequest) returns (SignInResponse) {
        option (google.api.http) = {
            post: "/api/v1/sign-in"
            body: "*"
        };
    }

    rpc SignOut (SignOutRequest) returns (SignOutResponse) {
        option (google.api.http) = {
            get: "/api/v1/sign-out"
        };
    }

    rpc CreateEvent(CreateEventRequest) returns (CreateEventResponse) {
        option (google.api.http) = {
            post: "/api/v1/event"
            body: "*"
        };
    }

    rpc ReadEvent(ReadEventRequest) returns (ReadEventResponse) {
        option (google.api.http) = {
            get: "/api/v1/event/{event_id}"
        };
    }

    rpc UpdateEvent(UpdateEventRequest) returns (UpdateEventResponse) {
        option (google.api.http) = {
            put: "/api/v1/event/{event.event_id}"
            body: "event"
        };
    }

    rpc DeleteEvent(DeleteEventRequest) returns (DeleteEventResponse) {
        option (google.api.http) = {
            delete: "/api/v1/event/{event_id}"
        };
    }

    rpc ListEvents(ListEventsRequest) returns (ListEventsResponse) {
        option (google.api.http) = {
            get: "/api/v1/event"
        };
    }

    rpc ListEventsByCreator(ListEventsByCreatorRequest) returns (ListEventsByCreatorResponse) {
        option (google.api.http) = {
            get: "/api/v1/event/creator/{creator_id}"
        };
    }

    rpc ListEventsByInterests(ListEventsByInterestsRequest) returns (ListEventsByInterestsResponse) {
        option (google.api.http) = {
            get: "/api/v1/event/interests/{user_id}"
        };
    }

    rpc RegisterUser(RegisterUserRequest) returns (RegisterUserResponse) {
        option (google.api.http) = {
            post: "/api/v1/event/register"
            body: "*"
        };
    }

    rpc SetChatStatus(SetChatStatusRequest) returns (SetChatStatusResponse) {
        option (google.api.http) = {
            put: "/api/v1/event/chat"
            body: "*"
        };
    }

    rpc ListUsersToChat(ListUsersToChatRequest) returns (ListUsersToChatResponse) {
        option (google.api.http) = {
            get: "/api/v1/event/chat/{event_id}/{user_id}"
        };
    }

    rpc ListRegistratedEvents(ListRegistratedEventsRequest) returns (ListRegistratedEventsResponse) {
        option (google.api.http) = {
            get: "/api/v1/event/registrated/{user_id}"
        };
    }
}

message Event {
    int64 event_id = 1;
    int64 creator_id = 2;
    string title = 3;
    string description = 4;
    string time = 5;
    string place = 6;
    repeated string interests = 7;
}

message Participant {
    int64 user_id = 1;
    string name = 2;
    repeated string interests = 3;
}

message CreateEventRequest {
    Event event = 1;
}

message CreateEventResponse {
    int64 event_id = 1;
}

message ReadEventRequest { 
    int64 event_id = 2;
}

message ReadEventResponse {
    Event event = 1;
}

message UpdateEventRequest {
    Event event = 1;
}

message UpdateEventResponse {
}

message DeleteEventRequest {
    int64 event_id = 1;
}

message DeleteEventResponse {
}

message ListEventsRequest {
}

message ListEventsResponse {
    repeated Event events = 1;
}

message ListEventsByCreatorRequest {
    int64 creator_id = 1;
}

message ListEventsByCreatorResponse {
    repeated Event events = 1;
}

message ListEventsByInterestsRequest {
    int64 user_id = 1;
}

message ListEventsByInterestsResponse {
    repeated Event events = 2;
}

message RegisterUserRequest {
    int64 user_id = 1;
    int64 event_id = 2;
}

message RegisterUserResponse {
}

message SetChatStatusRequest {
    int64 user_id = 1;
    int64 event_id = 2;
    bool is_ready = 3;
}

message SetChatStatusResponse {
}

message ListUsersToChatRequest {
    int64 event_id = 1;
    int64 user_id = 2;
}

message ListUsersToChatResponse {
    repeated Participant participants = 1;
}

message ListRegistratedEventsRequest { 
    int64 user_id = 1;
}

message ListRegistratedEventsResponse {
    repeated Event events = 1;
}

message SignUpRequest {
    int64 id = 1;
    string name = 2;
    string email = 3;
    string password = 4;
    string role = 5;
    repeated string interests = 6; 
}

message SignUpResponse {
    string message = 1;
}

message SignInRequest {
    string name = 1;
    string password = 2;
}

message SignInResponse {
    string access_token = 1;
    int64 access_token_ttl = 2;
    string refresh_token = 3;
    int64 refresh_token_ttl = 4;
}

message SignOutRequest {
}

message SignOutResponse {
}