syntax = "proto3";

option go_package = "pkg/proto";
package protobf;

service AuthService {
  rpc Register(RegisterRequest) returns (RegisterResponse);
  rpc Authenticate(AuthenticateRequest) returns (AuthenticateResponse);
  rpc Authorise(AuthoriseRequest) returns (AuthoriseResponse);  
}

message User {
  int64 id = 1;
  string name = 2;
  string email = 3;
  string password = 4;
  string role = 5;
  repeated string interests = 6; 
}

message Token {
  string access_token = 1;
  int64 access_token_ttl = 2; // Time in seconds
  string refresh_token = 3;
  int64 refresh_token_ttl = 4; // Time in seconds
}


// Register
message RegisterRequest {
  User user = 1;
}

message RegisterResponse {
  string message = 1; 
}

// Authenticate
message AuthenticateRequest {
  string name = 1;
  string password = 2;
}

message AuthenticateResponse {
  Token tokens = 1;
}

// ValidateToken
message AuthoriseRequest {
  string token = 1;
}

message AuthoriseResponse {
  string role = 1;
  string message = 2;
}